--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <h1>Brent's Risk Simulator</h1>
 
 <div>
-	<span style="width:150px; display:inline-block">Attacker armies</span>
+	<span style="width:1.5in; display:inline-block">Attacker armies</span>
 		<input type="range" min="2" max="50" value="5" class="slider" style="width:250px" id="attackers">
 		<label for="attackers" id="attackersLabel"></label>
 	<p/>
-	<span style="width:150px; display:inline-block">Defender armies</span>
+	<span style="width:1.5in; display:inline-block">Defender armies</span>
 		<input type="range" min="1" max="50" value="5" class="slider" style="width:250px" id="defenders">
 		<label for="defenders" id="defendersLabel"></label>
 	<p/>
-	<span style="width:150px; display:inline-block">Runs</span>
+	<span style="width:1.5in; display:inline-block">Runs</span>
 		<input type="range" min="50" max="1000" value="250" class="slider" id="runs">
 		<label for="runs" id="runsLabel"></label>
 	<p/>
