--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	}
 </style>
 <body>
-<h1>Brent's Risk Simulator</h1>
+<div style="margin:0.25in; text-align:center">
+	<h2>Brent's Risk Simulator</h2>
+</div>
 
-<div>
+<div style="border-style:solid; border-width:1px; padding:0.1in; margin:0.25in">
 	<span style="width:1.5in; display:inline-block">Attacker armies</span>
 		<input type="range" min="2" max="50" value="5" class="slider" style="width:250px" id="attackers">
 		<label for="attackers" id="attackersLabel"></label>
